[tool.poetry]
name = "elcid"
version = "0.1.0"
description = ""
authors = ["Deep Chatterjee <deep.chatterjee@ligo.org>"]
packages = [
    { include = "elcid" },
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
